2020-11-17  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/gfrcs7.cpp: updated
	code structure re-organized, and inelastic channel included
	(gfrResonancePenetrability): new function
	* source/gfrcs3.cpp: updated
	(gfrResonancePenetrability): new function
	penetrability calculation depdending on NRO and NAPS moved to new functions
	these two are alomost the same

	* source/gfrcs1.cpp: updated
	* source/gfrcsurr.cpp: updated
	* source/gfr.h: updated
	* source/gfr.cpp: updated
	cross section calculations for some NRO/NAPS combinations updated

	* source/gfrenergy.cpp (gfrAutoEnergyURR): modified
	energy grid for a special case where only URR parameters are given added

2020-11-14  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/gfr.h (class ChannelWaveFunc): modified
	(class RMLChannel): new class
	class Wfunc renamed, and updated
	RMLChannel stores channel info

	* source/gfrcross.cpp (gfrPenetrability): modified
	Hankel functions are stored by setData method,
	and setPhase copies only phase parameters


2020-11-09  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/coulomb.h: new file
	* source/coulomb.cpp: new file
	* source/gfr.cpp (gfrPrintCrossSection): updated
	* source/gfr.h (class GFRcross): new class
	* source/gfrcs7.cpp: updated
	charged particle channels added to LRF=7, R-matrix limited
	Coulomb function source code incorporated

2020-11-01  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/global.h (class GlobalOption): updated
	* source/deceglobaloption.cpp (DeceCheckReadRange): new function
	* source/deceglobaloption.cpp (DeceCheckEditRange): new function
	new global options, ReadRangeMin/Max, EditRangeMin/Max added

	* source/deceangdist.cpp: updated
	* source/deceread.cpp: updated
	* source/deceapplyfunc.cpp (DeceApplyFunc): updated
	include DeceCheckReadRange and DeceCheckEditRange

	* test/input/input20.dece: new file
	* test/input/input21.dece: new file
	test for these new global options

	* source/decememory.cpp: new file